Corrected/removed the author from the Theme, added an extra line of CSS to fix distorted images on template pages, fixed the archive.php which had broken the category pages.

--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@ Text Domain: White Allies
 Version: 1.0
 Description: category based for story collection
 Tags: responsive, fancy
-Author: web developer apprentice network
-Author URI: https://webdevapprentice.uk/
 */
 /* CSS Variables */
 :root {
@@ -66,6 +64,7 @@ h2 {
 
 img {
   max-width: 100%;
+  height: auto;
 }
 
 .wrapper {
